# cpputils

./: CMakeLists.txt  LICENSE  README.md
include/: AocUtils.h  Point.h  Segment.h
tst/: CMakeLists.txt  IntParserTest.cc  LongParserTest.cc  PointTest.cc  SegmentTest.cc  SplitTest.cc
